--- a/webapp/view/View2.view.xml
+++ b/webapp/view/View2.view.xml
@@ -3,19 +3,19 @@
     xmlns:f="sap.ui.layout.form"
     xmlns:core="sap.ui.core"
     xmlns="sap.m">
-    <Page id="page" title="{i18n>title}">
+    <Page id="page" title="{i18n>title}" showNavButton="true" navButtonPress=".onNavBack">
         <headerContent>
             <Image id="image1" src="/images/logo_forc.png" height="35px"/>
             <Image id="image2" src="/images/infrabeat.png" height="20px"/>
         </headerContent>
         <IconTabBar id="idIconTabBarNoIcons">
             <items>
-                <IconTabFilter id="_IDGenIconTabFilter1" text="General" >
-                    <core:Fragment fragmentName="moc.fragments.General" type="XML"/>
+                <IconTabFilter id="_IDGenIconTabFilter1" text="General">
+                    <core:Fragment fragmentName="moc.fragments.General" type="XML" binding="{path:'ZMOC_DETSet'}"/>
                 </IconTabFilter>
 
                 <IconTabFilter id="_IDGenIconTabFilter2" text="Approval/Review">
-                    <core:Fragment fragmentName="moc.fragments.approval" type="XML"/>
+                    <core:Fragment fragmentName="moc.fragments.approval" type="XML" binding="{path:'ZMOC_DETSet'}"/>
                 </IconTabFilter>
                 <IconTabFilter id="_IDGenIconTabFilter3" text="External Files">
                     <core:Fragment fragmentName="moc.fragments.externalfiles" type="XML"/>
@@ -29,7 +29,7 @@
                 <ToolbarSpacer id="_IDGenToolbarSpacer1" />
                 <Button id="_IDGenButton1" type="Accept" text="Submit" press="onSave" width="150px"/>
                 <Button id="_IDGenButton2" type="Neutral" text="Reset" press="onReset" width="150px"/>
-                <Button id="_IDGenButton3" type="Reject" text="Cancel" press="onCancel" width="150px"/>
+                <Button id="_IDGenButton3" type="Reject" text="Back" press=".onNavBack" width="150px"/>
             </Toolbar>
         </footer>
     </Page>
