--- a/webapp/view/View2.view.xml
+++ b/webapp/view/View2.view.xml
@@ -6,7 +6,7 @@
     <Page id="page" title="{i18n>title}" showNavButton="true" navButtonPress=".onNavBack">
         <headerContent>
             <Image id="image1" src="/images/logo_forc.png" height="35px"/>
-            <Image id="image2" src="/images/infrabeat.png" height="20px"/>
+            <!-- <Image id="image2" src="/images/infrabeat.png" height="20px"/> -->
         </headerContent>
         <IconTabBar id="idIconTabBarNoIcons">
             <items>
@@ -20,14 +20,14 @@
                 <IconTabFilter id="_IDGenIconTabFilter3" text="External Files">
                     <core:Fragment fragmentName="moc.fragments.externalfiles" type="XML"/>
                 </IconTabFilter>
-                <IconTabFilter id="_IDGenIconTabFilter4" text="Workflow Log"/>
+                <!-- <IconTabFilter id="_IDGenIconTabFilter4" text="Workflow Log"/> -->
             </items>
         </IconTabBar>
         <content />
         <footer>
             <Toolbar id="_IDGenToolbar1">
                 <ToolbarSpacer id="_IDGenToolbarSpacer1" />
-                <Button id="_IDGenButton1" type="Accept" text="Submit" press="onSave" width="150px"/>
+                <Button id="_IDGenButton1" type="Accept" text="Submit" press=".onSave" width="150px"/>
                 <Button id="_IDGenButton2" type="Neutral" text="Reset" press="onReset" width="150px"/>
                 <Button id="_IDGenButton3" type="Reject" text="Back" press=".onNavBack" width="150px"/>
             </Toolbar>
