--- a/webapp/view/View2.view.xml
+++ b/webapp/view/View2.view.xml
@@ -11,14 +11,14 @@
         <IconTabBar id="idIconTabBarNoIcons">
             <items>
                 <IconTabFilter id="_IDGenIconTabFilter1" text="General" key="Gen">
-                    <core:Fragment fragmentName="moc.fragments.General" id="generalfrag" type="XML" binding="{path:'ZMOC_DETSet'}"/>
+                    <core:Fragment fragmentName="moc.fragments.General" id="generalfrag" type="XML" binding="{path:'ReportModel'}"/>
                 </IconTabFilter>
 
                 <IconTabFilter id="_IDGenIconTabFilter2" text="Approval/Review">
-                    <core:Fragment fragmentName="moc.fragments.approval" type="XML" binding="{path:'ZMOC_DETSet'}"/>
+                    <core:Fragment fragmentName="moc.fragments.approval" id="apprid"  type="XML" binding="{path:'ReportModel'}"/>
                 </IconTabFilter>
                 <IconTabFilter id="_IDGenIconTabFilter3" text="External Files">
-                    <core:Fragment fragmentName="moc.fragments.externalfiles" id="external" type="XML" binding="{path:'ZMOC_EXT_FILESet'}"/>
+                    <core:Fragment fragmentName="moc.fragments.externalfiles" id="external" type="XML"/>
                 </IconTabFilter>
                 <!-- <IconTabFilter id="_IDGenIconTabFilter4" text="Workflow Log"/> -->
             </items>
