--- a/webapp/view/View2.view.xml
+++ b/webapp/view/View2.view.xml
@@ -27,9 +27,10 @@
         <footer>
             <Toolbar id="_IDGenToolbar1">
                 <ToolbarSpacer id="_IDGenToolbarSpacer1" />
-                <Button id="_IDGenButton1" type="Accept" text="Submit" press=".onSave" width="150px"/>
-                <Button id="_IDGenButton2" type="Neutral" text="Reset" press=".onReset" width="150px"/>
-                <Button id="_IDGenButton3" type="Reject" text="Back" press=".onNavBack" width="150px"/>
+                <Button id="_IDGenButton1" type="Accept" text="Submit" press=".onSave" width="100px" icon="sap-icon://save"/>
+                <Button id="_IDGenButton2" type="Neutral" text="Reset" press=".onReset" width="100px" icon="sap-icon://reset"/>
+                <Button id="_IDPrintButton" text="Print" type="Accept" press=".onPrint" width="100px" icon="sap-icon://print"/>
+                <Button id="_IDGenButton3" type="Reject" text="Back" press=".onNavBack" width="100px" icon="sap-icon://sys-back"/>
             </Toolbar>
         </footer>
     </Page>
