--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -9,13 +9,13 @@
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
         <headerContent>
-            <Image id="image1" src="/images/logo_forc.png" height="35px"/>
+            <!-- <Image id="image1" src="/images/logo_forc.png" height="35px"/> -->
             <!-- <Image id="image2" src="/images/infrabeat.png" height="20px"/> -->
         </headerContent>
         <VBox id="smartfilter">
             <smartFilterBar:SmartFilterBar id="smartFilterBar" entitySet="ZMOC_DETSet" persistencyKey="SmartFilter_Explored">
                 <smartFilterBar:controlConfiguration>
-                    <smartFilterBar:ControlConfiguration id="codeno" key="Code" visibleInAdvancedArea="true">
+                    <smartFilterBar:ControlConfiguration id="codeno" key="Doc_No" visibleInAdvancedArea="true">
                         <smartFilterBar:customControl>
                             <MultiInput id="filterCode" valueHelpRequest=".onCodeVHPRequested">
                             </MultiInput>
@@ -62,9 +62,9 @@
                 <columns>
                     <Column id="CODE" hAlign="Begin">
                         <customData>
-                            <core:CustomData key="p13nData" value='\{"columnKey": "Code", "autoColumnWidth": \{ "visibleProperty": "Code" }, "columnIndex": 0, "leadingProperty": "Code", "sortProperty": "Code"}' />
+                            <core:CustomData key="p13nData" value='\{"columnKey": "Doc_No", "autoColumnWidth": \{ "visibleProperty": "Doc_No" }, "columnIndex": 0, "leadingProperty": "Doc_No", "sortProperty": "Doc_No"}' />
                         </customData>
-                        <Text id="txtreport" text="{/#ZMOC_DETSet/Code/@sap:label}" />
+                        <Text id="txtreport" text="{/#ZMOC_DETSet/Doc_No/@sap:label}" />
                     </Column>
                     <Column id="ColPLANT" hAlign="Begin">
                         <customData>
@@ -100,7 +100,7 @@
                 <items>
                     <ColumnListItem id="cli">
                         <cells>
-                            <Text id="celltxtreport" text="{Code}" />
+                            <Text id="celltxtreport" text="{Doc_No}" />
                         </cells>
                         <cells>
                             <Text id="celltxtplant" text="{Plant}" />
